# LearningVK

./: CMakeLists.txt
shaders/: FirstTriangle.frag.shader  FirstTriangle.frag.spv  FirstTriangle.vert.shader  VertexBuffer.frag.shader  VertexBuffer.vert.shader
sources/: VKbase+.h  VKbase.h  VkFormat.h  easyVkStart.h  easyVulkan.hpp  glfwGeneral.hpp  main.cpp
